# project

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  test_cycle_report.json
.github/workflows/: ci.yml
docs/: api.md  architecture.md  index.md  quickstart.md  site-catalog.md  skill-development-guide.md  skills.md  team-intro.md  test-spec.md
docs/adr/: 001-three-layer-architecture.md  002-sandboxed-script-engine.md  003-agent-loop-design.md  index.md
examples/: 01_basic_browser.py  02_script_engine.py  03_domain_automation.py  04_event_hooks.py  05_mcp_client.py  README.md
skills/: generic_login.yaml
skills/search/: amazon_search.yaml  baidu_search.yaml  bing_search.yaml  github_search.yaml  google_search.yaml  weibo_search.yaml  youtube_search.yaml  zhihu_search.yaml
src/: __main__.py  cli.py  config.py  logging.py  server.py
src/core/: agent_loop.py  auth_manager.py  browser_manager.py  event_bus.py  script_engine.py  script_generator.py  vision.py
src/gui/: app.py
src/layer_1/: actions.py
tests/: conftest.py  test_actions.py  test_agent_loop.py  test_auth_manager.py  test_browser_manager.py  test_cli.py  test_config_updater.py  test_controls.py  test_domain_loader.py  test_event_bus.py  test_github_direct.py  test_github_login.py  test_github_login_skill.py  test_logging.py  test_script_engine.py  test_server.py  test_simple_login.py  test_skill_base.py  test_skill_loader.py  test_skill_registry.py  test_skill_schema.py  test_vision.py
workflows/: framework-shell.md
(+33 files in other folders)
