[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-playwright-mcp"
version = "0.1.0"
description = "MCP server for agentic browser automation with Playwright (optional CloakBrowser stealth)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
stealth = [
    "cloakbrowser>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[project.scripts]
agentic-playwright-mcp = "src.cli:main"
browser-agent = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
